# uk-healthcare-big-data-pipeline

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LABS.md  LICENSE  README.md  pyproject.toml  test_nhsbsa_fetch.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  schedule.yml
flows/: pipeline_flow.py
notebooks/: 00_introduction.py  01_parallel_fetch.py  02_raw_lake.py  03_duckdb_query.py  04_polars_transform.py  05_nlp_unstructured.py  06_join_and_visualise.py  07_medallion_architecture.py  08_streaming_simulation.py  09_dashboard_report.py  10_backfill.py
scripts/: 01_fetch.py  02_query_bronze.py  03_transform.py  04_medallion.py  05_nlp.py  06_visualise.py  07_stream.py  08_backfill.py
src/pipeline/: __init__.py  contracts.py  fetch.py  lake.py  lineage.py  medallion.py  nlp.py  stream.py  transform.py  visualise.py
tests/: test_contracts.py  test_fetch.py  test_integration.py  test_lake.py  test_lineage.py  test_medallion.py  test_nlp.py  test_pipeline.py  test_stream.py  test_transform.py  test_visualise.py
